@@ -2,7 +2,6 @@ package jenkinsci.plugins.influxdb.generators.serenity;
 
 import java.io.IOException;
 import java.net.URISyntaxException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -25,6 +24,6 @@ public class SerenityCannedJsonSummaryFile implements ISerenityJsonSummaryFile {
     }
 
     public String getContents() throws IOException {
-        return new String(Files.readAllBytes(getPath()), StandardCharsets.UTF_8);
+        return Files.readString(getPath());
     }
 }
